--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+File Name: API.py
+Name:   Magnus Harboe
+        Athena Enosara
+        Andrew Marmolejo
+        Guadalupe Cisneros
+Due Date: 5 / 13 / 19
+Description: This program uses the spoonacular api to find recipes that fits what the user have in their fridge.
 
