--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-File Name: API.py
+File Name: experiments.txt
 Name:   Magnus Harboe
         Athena Enosara
         Andrew Marmolejo
         Guadalupe Cisneros
 Due Date: 5 / 13 / 19
-Description: This program uses the spoonacular api to find recipes that fits what the user have in their fridge.
+Description: This file outlines the requirements for the project. 
+
+The requirements to run the project include: 
 
