--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Dependencies needed to run the application:
         ○ Flask-WTF       0.14.2
         ○ requests        2.21.0
         ○ WTForms         2.2.1
+        ○ Python          2.7.15
 
 
 
